shifter/out_test_1/openshift-monitoring/alertmanager-operated.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-04-19T14:05:34Z"
  labels:
    operated-alertmanager: "true"
  name: alertmanager-operated
  namespace: openshift-monitoring
  resourceVersion: "2717"
  selfLink: /api/v1/namespaces/openshift-monitoring/services/alertmanager-operated
  uid: c7d1b5eb-bfe9-11ec-b9cc-42010a000003
spec:
  clusterIP: None
  ports:
  - name: web
    port: 9093
    protocol: TCP
    targetPort: 9093
  - name: mesh
    port: 6783
    protocol: TCP
    targetPort: 6783
  selector:
    app: alertmanager
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
