shifter/out_test_1/openshift-monitoring/kube-state-metrics.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: kube-state-metrics-tls
    service.alpha.openshift.io/serving-cert-signed-by: openshift-service-serving-signer@1650376713
  creationTimestamp: "2022-04-19T14:06:20Z"
  labels:
    k8s-app: kube-state-metrics
  name: kube-state-metrics
  namespace: openshift-monitoring
  resourceVersion: "21099113"
  selfLink: /api/v1/namespaces/openshift-monitoring/services/kube-state-metrics
  uid: e37888a2-bfe9-11ec-b9cc-42010a000003
spec:
  clusterIP: None
  ports:
  - name: https-main
    port: 8443
    protocol: TCP
    targetPort: https-main
  - name: https-self
    port: 9443
    protocol: TCP
    targetPort: https-self
  selector:
    app: kube-state-metrics
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2022-04-19T14:06:20Z"
  generation: 35155
  labels:
    app: kube-state-metrics
  name: kube-state-metrics
  namespace: openshift-monitoring
  resourceVersion: "21099112"
  selfLink: /apis/apps/v1/namespaces/openshift-monitoring/deployments/kube-state-metrics
  uid: e37d277a-bfe9-11ec-b9cc-42010a000003
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kube-state-metrics
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kube-state-metrics
    spec:
      containers:
      - args:
        - --secure-listen-address=:8443
        - --upstream=http://127.0.0.1:8081/
        - --tls-cert-file=/etc/tls/private/tls.crt
        - --tls-private-key-file=/etc/tls/private/tls.key
        - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_RSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256
        image: quay.io/coreos/kube-rbac-proxy:v0.3.1
        imagePullPolicy: IfNotPresent
        name: kube-rbac-proxy-main
        ports:
        - containerPort: 8443
          name: https-main
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 20Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/tls/private
          name: kube-state-metrics-tls
      - args:
        - --secure-listen-address=:9443
        - --upstream=http://127.0.0.1:8082/
        - --tls-cert-file=/etc/tls/private/tls.crt
        - --tls-private-key-file=/etc/tls/private/tls.key
        - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_RSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256
        image: quay.io/coreos/kube-rbac-proxy:v0.3.1
        imagePullPolicy: IfNotPresent
        name: kube-rbac-proxy-self
        ports:
        - containerPort: 9443
          name: https-self
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 20Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/tls/private
          name: kube-state-metrics-tls
      - args:
        - --host=127.0.0.1
        - --port=8081
        - --telemetry-host=127.0.0.1
        - --telemetry-port=8082
        image: quay.io/coreos/kube-state-metrics:v1.3.1
        imagePullPolicy: IfNotPresent
        name: kube-state-metrics
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp
          name: volume-directive-shadow
        - mountPath: /etc/localtime
          name: timezone
          readOnly: true
      dnsPolicy: ClusterFirst
      nodeSelector:
        node-role.kubernetes.io/infra: "true"
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: kube-state-metrics
      serviceAccountName: kube-state-metrics
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: volume-directive-shadow
      - name: kube-state-metrics-tls
        secret:
          defaultMode: 420
          secretName: kube-state-metrics-tls
      - hostPath:
          path: /etc/localtime
          type: ""
        name: timezone
status: {}
---
apiVersion: v1
imagePullSecrets:
- name: kube-state-metrics-dockercfg-njkc6
kind: ServiceAccount
metadata:
  creationTimestamp: "2022-04-19T14:06:20Z"
  name: kube-state-metrics
  namespace: openshift-monitoring
  resourceVersion: "2983"
  selfLink: /api/v1/namespaces/openshift-monitoring/serviceaccounts/kube-state-metrics
  uid: e3525182-bfe9-11ec-b9cc-42010a000003
secrets:
- name: kube-state-metrics-token-mdq9f
- name: kube-state-metrics-dockercfg-njkc6
