shifter/out_test_1/openshift-monitoring/prometheus-operated.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-04-19T14:04:53Z"
  labels:
    operated-prometheus: "true"
  name: prometheus-operated
  namespace: openshift-monitoring
  resourceVersion: "2491"
  selfLink: /api/v1/namespaces/openshift-monitoring/services/prometheus-operated
  uid: af4f1963-bfe9-11ec-b9cc-42010a000003
spec:
  clusterIP: None
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    app: prometheus
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
