shifter/out_test_1/openshift-monitoring/prometheus-operator.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-04-19T14:04:02Z"
  labels:
    k8s-app: prometheus-operator
  name: prometheus-operator
  namespace: openshift-monitoring
  resourceVersion: "2187"
  selfLink: /api/v1/namespaces/openshift-monitoring/services/prometheus-operator
  uid: 91577a69-bfe9-11ec-b9cc-42010a000003
spec:
  clusterIP: None
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    k8s-app: prometheus-operator
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2022-04-19T14:04:02Z"
  generation: 35155
  labels:
    k8s-app: prometheus-operator
  name: prometheus-operator
  namespace: openshift-monitoring
  resourceVersion: "21098993"
  selfLink: /apis/apps/v1/namespaces/openshift-monitoring/deployments/prometheus-operator
  uid: 915a1feb-bfe9-11ec-b9cc-42010a000003
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: prometheus-operator
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: prometheus-operator
    spec:
      containers:
      - args:
        - --kubelet-service=kube-system/kubelet
        - --logtostderr=true
        - --config-reloader-image=quay.io/coreos/configmap-reload:v0.0.1
        - --prometheus-config-reloader=quay.io/coreos/prometheus-config-reloader:v0.23.2
        - --namespace=openshift-monitoring
        image: quay.io/coreos/prometheus-operator:v0.23.2
        imagePullPolicy: IfNotPresent
        name: prometheus-operator
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
        securityContext: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      nodeSelector:
        node-role.kubernetes.io/infra: "true"
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: prometheus-operator
      serviceAccountName: prometheus-operator
      terminationGracePeriodSeconds: 30
status: {}
---
apiVersion: v1
imagePullSecrets:
- name: prometheus-operator-dockercfg-j8w7s
kind: ServiceAccount
metadata:
  creationTimestamp: "2022-04-19T14:04:02Z"
  name: prometheus-operator
  namespace: openshift-monitoring
  resourceVersion: "2186"
  selfLink: /api/v1/namespaces/openshift-monitoring/serviceaccounts/prometheus-operator
  uid: 914f4481-bfe9-11ec-b9cc-42010a000003
secrets:
- name: prometheus-operator-token-5ln5b
- name: prometheus-operator-dockercfg-j8w7s
